--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -3,7 +3,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Dashboard{% endblock %}</title>
+    <title>{% block title %}{% endblock %} | {{ empresa_nombre }}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
@@ -17,6 +17,18 @@
                     {% if user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'edit_profile' %}">Editar perfil</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'change_password' %}">Cambiar contraseña</a></li>
+                        {% if perms.dashboard.view_empresa %}
+                            <li class="nav-item"><a class="nav-link" href="{% url 'empresa_list' %}">Empresas</a></li>
+                        {% endif %}
+                        {% if perms.dashboard.view_unidadorganizativa %}
+                            <li class="nav-item"><a class="nav-link" href="{% url 'unidad_list' %}">Unidades</a></li>
+                        {% endif %}
+                        {% if perms.dashboard.view_departamento %}
+                            <li class="nav-item"><a class="nav-link" href="{% url 'departamento_list' %}">Departamentos</a></li>
+                        {% endif %}
+                        {% if perms.dashboard.view_cargo %}
+                            <li class="nav-item"><a class="nav-link" href="{% url 'cargo_list' %}">Cargos</a></li>
+                        {% endif %}
                         {% if user.is_superuser %}
                             <li class="nav-item"><a class="nav-link" href="{% url 'users_list' %}">Usuarios</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'roles_permissions' %}">Roles y Permisos</a></li>
