--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -1,50 +1,76 @@
-{% load static %}
 <!DOCTYPE html>
+{% load static %}
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %} | {{ empresa_nombre }}</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'dashboard' %}">Panel</a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav ms-auto">
-                    {% if user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'edit_profile' %}">Editar perfil</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'change_password' %}">Cambiar contraseña</a></li>
-                        {% if perms.dashboard.view_empresa %}
-                            <li class="nav-item"><a class="nav-link" href="{% url 'empresa_list' %}">Empresas</a></li>
-                        {% endif %}
-                        {% if perms.dashboard.view_unidadorganizativa %}
-                            <li class="nav-item"><a class="nav-link" href="{% url 'unidad_list' %}">Unidades</a></li>
-                        {% endif %}
-                        {% if perms.dashboard.view_departamento %}
-                            <li class="nav-item"><a class="nav-link" href="{% url 'departamento_list' %}">Departamentos</a></li>
-                        {% endif %}
-                        {% if perms.dashboard.view_cargo %}
-                            <li class="nav-item"><a class="nav-link" href="{% url 'cargo_list' %}">Cargos</a></li>
-                        {% endif %}
-                        {% if user.is_superuser %}
-                            <li class="nav-item"><a class="nav-link" href="{% url 'users_list' %}">Usuarios</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{% url 'roles_permissions' %}">Roles y Permisos</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{% url 'create_group' %}">Crear Grupo/Rol</a></li>
-                        {% endif %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Cerrar sesión</a></li>
-                    {% else %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Iniciar sesión</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Registrarse</a></li>
-                    {% endif %}
-                </ul>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>
+      {{ empresa_nombre}} | {% block title %} {% endblock %}
+    </title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <!-- Google Font: Source Sans Pro -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback" />
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="{% static 'plugins/fontawesome-free/css/all.min.css' %}" />
+    <!-- Theme style -->
+    <link rel="stylesheet" href="{% static 'dist/css/adminlte.min.css' %}" />
+  </head>
+  <body class="hold-transition sidebar-mini">
+    <div class="wrapper">
+      <!-- Navbar -->
+      {% include 'dashboard/layouts/navbar.html' %}
+      <!-- /.navbar -->
+      <!-- Content Wrapper. Contains page content -->
+      <div class="content-wrapper">
+        <section class="content-header">
+          <div class="container-fluid">
+            <div class="row mb-2">
+              <div class="col-sm-6">
+                <h1>
+                  {% block titlecontent %}
+
+                  {% endblock %}
+                </h1>
+              </div>
+              <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                  <li class="breadcrumb-item">
+                    <a href="/">Dashboard</a>
+                  </li>
+                  <li class="breadcrumb-item active">
+                    {% block titlemenu %}
+
+                    {% endblock %}
+                  </li>
+                </ol>
+              </div>
             </div>
-        </div>
-    </nav>
-    <div class="container">
-        {% block content %}{% endblock %}
-    </div>
-</body>
+          </div>
+          <!-- /.container-fluid -->
+        </section>
+  
+        {% block content %}
+
+
+
+
+        
+        {% endblock %}
+        <!-- /.content-wrapper -->
+      </div>
+ </div>
+      <!-- siderbar -->
+      {% include 'dashboard/layouts/sidebar.html' %}
+   
+    <!-- /.siderbar -->
+    <!-- REQUIRED SCRIPTS -->
+
+    <!-- jQuery -->
+    <script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
+    <!-- Bootstrap 4 -->
+    <script src="{% static 'plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <!-- AdminLTE App -->
+    <script src="{% static 'dist/js/adminlte.min.js' %}"></script>
+  </body>
 </html>
