--- a/dashboard/templates/dashboard/users/change_password.html
+++ b/dashboard/templates/dashboard/users/change_password.html
@@ -18,7 +18,7 @@
 			 <form method="post">
 					 {% csrf_token %}
 					 {{ form|crispy }}
-					 <button type="submit" class="btn btn-primary">Guardar nueva contraseña</button>
+				<button type="submit" class="btn btn-primary"><i class="fas fa-key"></i> Guardar nueva contraseña</button>
 			 </form>
 	 </div>
 </div>
