--- a/dashboard/templates/dashboard/users/edit_profile.html
+++ b/dashboard/templates/dashboard/users/edit_profile.html
@@ -61,7 +61,7 @@
 				</select>
 			</div>
 			{% endif %}
-			<button type="submit" class="btn btn-primary">Guardar cambios</button>
+			<button type="submit" class="btn btn-primary"><i class="fas fa-save"></i> Guardar cambios</button>
 		</form>
 	</div>
 </div>
