--- a/dashboard/templates/dashboard/users/login.html
+++ b/dashboard/templates/dashboard/users/login.html
@@ -1,20 +1,43 @@
-{% extends 'dashboard/base.html' %}
+{% extends 'dashboard/layouts/auth.html' %}
 {% load crispy_forms_tags %}
 {% block title %}Iniciar sesión{% endblock %}
 {% block content %}
-<div class="row justify-content-center">
-	<div class="col-md-6">
-		<h2>Iniciar sesión</h2>
-		{% if messages %}
-			{% for message in messages %}
-				<div class="alert alert-danger">{{ message }}</div>
-			{% endfor %}
-		{% endif %}
-		<form method="post">
-			{% csrf_token %}
-			{{ form|crispy }}
-			<button type="submit" class="btn btn-success">Entrar</button>
-		</form>
-	</div>
-</div>
+<div class="login-box">
+  <!-- /.login-logo -->
+  <div class="card card-outline card-primary">
+    <div class="card-header text-center">
+      <a href="" class="h1"><b>{{empresa_nombre}}</b>LTE</a>
+    </div>
+    <div class="card-body">
+      <p class="login-box-msg"></p>
+      <form  method="post">
+        {% csrf_token %}
+        <div class="input-group mb-3">
+          <input type="text" name="username" class="form-control" placeholder="Ingrese su usuario">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-envelope"></span>
+            </div>
+          </div>
+        </div>
+        <div class="input-group mb-3">
+          <input type="password" name="password" class="form-control" placeholder="Ingrese su contraseña">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <span class="fas fa-lock"></span>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col center">
+            <button type="submit" class="btn btn-primary btn-block">Iniciar sesión</button>
+          </div>
+          <!-- /.col -->
+        </div>
+      </form>
+    </div>
+    <!-- /.card-body -->
+  </div>
 {% endblock %}
+
+
