--- a/dashboard/templates/dashboard/users/register.html
+++ b/dashboard/templates/dashboard/users/register.html
@@ -19,7 +19,7 @@
 					{% endfor %}
 				</select>
 			</div>
-			<button type="submit" class="btn btn-primary">Registrar usuario</button>
+			<button type="submit" class="btn btn-primary"><i class="fas fa-user-plus"></i> Registrar usuario</button>
 		</form>
 	</div>
 </div>
